cfn_benchmark/cfn_templates/fortify-presales__IaC-Samples/cloudformation/iwa_dev_cft.yaml
AWSTemplateFormatVersion: '2010-09-09'
Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: 'AWS::EC2::KeyPair::KeyName'
    ConstraintDescription: Can contain only ASCII characters.
  InstanceType:
    Description: WebServer EC2 instance type
    Type: String
    Default: m1.large
    ConstraintDescription: must be a valid EC2 instance type.
  InboundTraffic:
    Description: The IP address CIDR range (x.x.x.x/x) to connect from your local machine.  FYI, get your address using http://checkip.amazonaws.com/
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: '0.0.0.0/0'
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    ConstraintDescription: Must be a valid CIDR range of the form x.x.x.x/x.
Conditions:
  HasDBSnapshotIdentifier: !Not [!Equals [!Ref DBSnapshotIdentifier, '']]
Resources:
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 3389
        ToPort: 3389
        CidrIp:
          Ref: InboundTraffic
      - IpProtocol: tcp
        FromPort: 8580
        ToPort: 8580
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 8080
        ToPort: 8080
        CidrIp: 0.0.0.0/0
  DBEC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Open IWA DB for access
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 3306
        ToPort: 3306
        CidrIp: 0.0.0.0/0
  IWAJavaInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0cbcba412b2a46866
      InstanceType: m6i.4xlarge
      SecurityGroups:
      - Ref: InstanceSecurityGroup
      Tags:
      - Key: "Name"
        Value: "IWA Java Application"
  IWADBInstance:
    Type: AWS::RDS::DBInstance
    Properties:
      DBName: iwa_db
      DBInstanceClass: db.t2.small
      AllocatedStorage: !If [HasDBSnapshotIdentifier, !Ref 'AWS::NoValue', !Ref DBAllocatedStorage]
      Engine: MySQL
      EngineVersion: "8.0.28"
      MasterUsername: "root"
      MasterUserPassword: "Password123!"
      StorageEncrypted: false
      SecurityGroups:
        Ref: DBEC2SecurityGroup
  Ec2Volume:
    Type: AWS::EC2::Volume
    Properties:
      AutoEnableIO: 'false'
      Size: '5'
      AvailabilityZone: !Select [0, !GetAZs '']
      Tags:
      - Key: "Name"
        Value: "IWA file storage"
Outputs:
  JDBCConnectionString:
    Description: JDBC connection string for the database
    Value: !Join ['', ['jdbc:mysql://', !GetAtt [IWADBInstance, Endpoint.Address], ':', !GetAtt [IWADBInstance, Endpoint.Port], /iwa_db]]
